--- a/gb/14/7/1/n4190610.md
+++ b/gb/14/7/1/n4190610.md
@@ -1,47 +1,40 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nbjhgz3458/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nbjhgz3458/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nbjhgz3458/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nbjhgz3458/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nbjhgz3458/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>小心购买！十大流行消费品正在被淘汰</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2014/07/1407021424522482.jpg" />
-<h6>现代消费市场瞬息万变，资讯科技不断推陈出新，愈来愈多商品的生命周期变得短暂，不出几年光景，就被新科技产品取代。因此在选购商品时要慎重。（fotolia）
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2014年07月03日讯】（大纪元记者凌妃综合报导）现代消费市场瞬息万变，资讯科技不断推陈出新，愈来愈多<ahref="https://github.com/nbjhgz3458/djy/blob/master/gb/tag/%E5%95%86%E5%93%81.md#1">商品</a>的生命周期变得短暂，不出几年光景，就被新<ahref="https://github.com/nbjhgz3458/djy/blob/master/gb/tag/%E7%A7%91%E6%8A%80%E4%BA%A7%E5%93%81.md#1">科技产品</a>取代。像录音机被CD播放器取代，CD播放器又被DVD播放器打败，没几年DVD播放器终又被数字音频播放器所征服。</p>
-<p>随着互联网的广泛应用，人类日常生活方式开始改变。无论何时何地，只要可以上网，就可以轻松完成很多任务，造成一些<ahref="https://github.com/nbjhgz3458/djy/blob/master/gb/tag/%E5%95%86%E5%93%81.md#1">商品</a>退出历史舞台。根据美国财经网站《市场观察》（MarketWatch）的报导，有十种商品将逐渐被<ahref="https://github.com/nbjhgz3458/djy/blob/master/gb/tag/%E6%B7%98%E6%B1%B0.md#1">淘汰</a>，也许在几年之内就变成家中“古董”，消费者在购买时，需要多加注意。</p>
+	<p>【大纪元2014年07月03日讯】（大纪元记者凌妃综合报导）现代消费市场瞬息万变，资讯科技不断推陈出新，愈来愈多<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%95%86%E5%93%81.md#1">商品</a>的生命周期变得短暂，不出几年光景，就被新<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A7%91%E6%8A%80%E4%BA%A7%E5%93%81.md#1">科技产品</a>取代。像录音机被CD播放器取代，CD播放器又被DVD播放器打败，没几年DVD播放器终又被数字音频播放器所征服。</p>
+<p>随着互联网的广泛应用，人类日常生活方式开始改变。无论何时何地，只要可以上网，就可以轻松完成很多任务，造成一些<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%95%86%E5%93%81.md#1">商品</a>退出历史舞台。根据美国财经网站《市场观察》（MarketWatch）的报导，有十种商品将逐渐被<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B7%98%E6%B1%B0.md#1">淘汰</a>，也许在几年之内就变成家中“古董”，消费者在购买时，需要多加注意。</p>
 <p><B>有线电视</B><br />
-	<figure id="attachment_5745019" style="width: 512px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/140702122949985.jpg" alt="Netflix和Hulu等视频网站飞速发展，是有线电视已从全盛时期走向衰败的原因之一。（fotolia）" title="Netflix和Hulu等视频网站飞速发展，是有线电视已从全盛时期走向衰败的原因之一。（fotolia）" width="512" b="438"
-	class="size-large wp-image-5745019" /></a><figcaption class="wp-caption-text">Netflix和Hulu等视频网站飞速发展，是有线电视已从全盛时期走向衰败的原因之一。（fotolia）</figcaption></figure><br />有线电视已从全盛时期走向衰败。自2004年起，美国的有线电视用户数就已经开始减少，分析师称没有好转迹象。根据信息来源网站IHS的报告，2013年全美约有5,480万的有线电视用户，比2012年下滑3.3％、较十年前的用户数少了17.6％，预计2014年将流失130万用户。</p>
+	<figure id="attachment_5745019" aria-describedby="caption-attachment-5745019" style="width: 512px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/07/140702122949985.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5745019" class="wp-caption-text">Netflix和Hulu等视频网站飞速发展，是有线电视已从全盛时期走向衰败的原因之一。（fotolia）</figcaption></figure><br />有线电视已从全盛时期走向衰败。自2004年起，美国的有线电视用户数就已经开始减少，分析师称没有好转迹象。根据信息来源网站IHS的报告，2013年全美约有5,480万的有线电视用户，比2012年下滑3.3％、较十年前的用户数少了17.6％，预计2014年将流失130万用户。</p>
 <p>通常有线电视最令人不满意的是，频道限制以及强迫吃到饱的昂贵费率。在美国，Netflix和Hulu等视频网站飞速发展，还有其他的视频提供商或是平台供应商（如：Amazon Video on Demand、Roku），因其提供低廉价格、甚至免费观看的互联网视频随选串流服务，让那些不在乎一定要看直播节目的有线电视用户纷纷投效，而成了“剪线族”（cord-cutters）。 </p>
 <p><B>DVD与蓝光播放器</B><br />
-	<figure id="attachment_5745026" style="width: 512px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/140702130136985.jpg" alt="目前DVD光碟无论是在销售量上，或者是租借生意方面都很不景气。（fotolia）" title="目前DVD光碟无论是在销售量上，或者是租借生意方面都很不景气。（fotolia）" width="512" b="343"
-	class="size-large wp-image-5745026" /></a><figcaption class="wp-caption-text">目前DVD光碟无论是在销售量上，或者是租借生意方面都很不景气。（fotolia）</figcaption></figure><br />目前DVD光碟无论是在销售量上，或者是租借生意方面都很不景气，根据市场调研公司SNL Kagan 的一项报告显示，2012年DVD与蓝光播放器的销售金额仅2,130万美金，比起2011年的数字下跌了20.1％、比2010年的数字少了24.8％。</p>
+	<figure id="attachment_5745026" aria-describedby="caption-attachment-5745026" style="width: 512px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/07/140702130136985.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5745026" class="wp-caption-text">目前DVD光碟无论是在销售量上，或者是租借生意方面都很不景气。（fotolia）</figcaption></figure><br />目前DVD光碟无论是在销售量上，或者是租借生意方面都很不景气，根据市场调研公司SNL Kagan 的一项报告显示，2012年DVD与蓝光播放器的销售金额仅2,130万美金，比起2011年的数字下跌了20.1％、比2010年的数字少了24.8％。</p>
 <p>专家表示，这是因为观看影片的消费者，纷纷转向Netflix和Hulu所提供的互联网随选串流服务的原因。还有，游戏玩家使用他们的电玩主机（如：Xbox One或是PlayStation 4）来观看DVD影片，也是另一个让DVD与蓝光播放器市场萧条的因素。</p>
 <p><B>数码相机</B><br />
-	<figure id="attachment_5745030" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/140702125916985-600x400.jpg" alt="数码相机正面临一股强劲对手，那就是可顶巨浪、强风并在海底、雪中摄影的GoPro相机 。(Photo by Andrew Burton/Getty Images)" title="数码相机正面临一股强劲对手，那就是可顶巨浪、强风并在海底、雪中摄影的GoPro相机 。(Photo by Andrew Burton/Getty Images)" width="600" b="400"
-	class="size-large wp-image-5745030" /></a><figcaption class="wp-caption-text">数码相机正面临一股强劲对手，那就是可顶巨浪、强风并在海底、雪中摄影的GoPro相机 。(Photo by Andrew Burton/Getty Images)</figcaption></figure><br />外型小巧讨喜的数码傻瓜相机多年来一直是颗耀眼之星，但现在市场需求也日薄西山。 据消费电子协会（Consumer Electronics Association）资料，2013年美国数码相机市场约有1,150万台，比2012年下滑了44％，预计今年的销售数量将低于800万台。</p>
+	<figure id="attachment_5745030" aria-describedby="caption-attachment-5745030" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/07/140702125916985-600x400.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5745030" class="wp-caption-text">数码相机正面临一股强劲对手，那就是可顶巨浪、强风并在海底、雪中摄影的GoPro相机 。(Photo by Andrew Burton/Getty Images)</figcaption></figure><br />外型小巧讨喜的数码傻瓜相机多年来一直是颗耀眼之星，但现在市场需求也日薄西山。 据消费电子协会（Consumer Electronics Association）资料，2013年美国数码相机市场约有1,150万台，比2012年下滑了44％，预计今年的销售数量将低于800万台。</p>
 <p>数码相机正面临认同危机，尽管有专业和喜爱摄影的消费者，仍选择高品质的数码单反相机（Digital Single-lens Reflex Camera, DSLR）。但不可否认的是，有愈来愈多人仰赖All-in-One的智能手机的“相机”功能。据台湾《苹果日报》报导，微驱科技总经理吴金荣预测，在可穿戴装置的协助下，智能手机未来可能会推出可更换镜头，让手机跃升为“高阶数码相机”取代真正的数码相机。</p>
 <p>另外，数码相机正面临一股强劲对手，那就是可顶巨浪、强风并在海底、雪中摄影的GoPro相机 。防水相机GoPro对数码相机的杀伤力很大，每台起价仅199.99美元，2013年共卖出380万台GoPro。</p>
 <p><B>台式机与笔记本电脑</B></p>
 <p>平板电脑几乎已取代台式机和笔记本电脑，因为它的功能（无论是音乐播放、相片分享、上网等）毫不逊色。平板电脑的价格也愈来愈平易近人，像苹果的 iMac起价是1,099美金、MacBook起价是899美金、iPad起价是299美金。</p>
-<figure id="attachment_5745038" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/1407020148312109-600x450.jpg" alt="平板电脑几乎已取代台式机和笔记本电脑，因为它的功能毫不逊色。图为平板电脑和智能手机。（Fotolia）" title="平板电脑几乎已取代台式机和笔记本电脑，因为它的功能毫不逊色。图为平板电脑和智能手机。（Fotolia）" width="600" b="450"
-	class="size-large wp-image-5745038" /></a><figcaption class="wp-caption-text">平板电脑几乎已取代台式机和笔记本电脑，因为它的功能毫不逊色。图为平板电脑和智能手机。（Fotolia）</figcaption></figure>
+<figure id="attachment_5745038" aria-describedby="caption-attachment-5745038" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/07/1407020148312109-600x450.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5745038" class="wp-caption-text">平板电脑几乎已取代台式机和笔记本电脑，因为它的功能毫不逊色。图为平板电脑和智能手机。（Fotolia）</figcaption></figure>
 <p>当然，并不是每个人的台式机和笔记本电脑都可以被取代，平面设计师以及一些专业人士因工作需要，大萤幕的电脑还是有其存在的优势。</p>
 <p>国际数据资讯（IDC）调查显示：2013年第4季平板电脑出货达8,410万台，首度超越个人电脑出货8,310万台。个人电脑于2012年全球出货量也比前一年下跌了4％，这是自2009年来触低的历史纪录。IDC预测，平板电脑和智能手机平均售价在2017年前将降至323美元，相较2012年均价462美元，这也将使平板电脑更具竞争力。</p>
 <p><B>GPS导航设备</B><br />[[6]]<br />
-	<figure id="attachment_5745048" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/140702123224985.jpg" alt="司机可以从智能手机免费下载地图导航应用程序。（fotolia）" title="司机可以从智能手机免费下载地图导航应用程序。（fotolia）" width="500" b="375"
-	class="size-large wp-image-5745048" /></a><figcaption class="wp-caption-text">司机可以从智能手机免费下载地图导航应用程序。（fotolia）</figcaption></figure><br />GPS问世之初广受好评，许多司机因使用卫星导航，降低迷路概率。但是，到了2012年，北美的卫星导航销售量却直线陡降，瑞典研究公司Berg Insight的数据显示，当年卖出的导航设备仅 750万台，较2009年1,800万台的高峰少了将近六成。</p>
+	<figure id="attachment_5745048" aria-describedby="caption-attachment-5745048" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/07/140702123224985.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5745048" class="wp-caption-text">司机可以从智能手机免费下载地图导航应用程序。（fotolia）</figcaption></figure><br />GPS问世之初广受好评，许多司机因使用卫星导航，降低迷路概率。但是，到了2012年，北美的卫星导航销售量却直线陡降，瑞典研究公司Berg Insight的数据显示，当年卖出的导航设备仅 750万台，较2009年1,800万台的高峰少了将近六成。</p>
 <p>这是否意味着司机不再需要GPS卫星导航？答案是移动上网与智能手机的出现改写了GPS的命运。司机可以从智能手机免费下载地图导航应用程序，如：Waze、Google Maps或是Scout by Telenav。</p>
 <p>另一个让卫星导航系统销售陡降的原因是，很多新车都推出内置车用导航系统。汽车资讯网Edmunds.com的资料显示，各车厂新车款内置车用导航系统从2010年的33％增加到2013年的49％。根据台湾工研院产业经济与资讯服务中心的报告，全球车用导航市场的规模从2004年的660万组成长至2011年的1,200万组。</p>
 <p><B>家用电话</B></p>
 <p>近年来桌上电话机用户也急剧减少，根据美国疾病控制和预防中心（Centers for Disease Control and Prevention）的数据显示，在2013年上半年有40％的美国家庭使用手机，相较于前一年同时期小幅攀升。</p>
 <p>在过去十年里，手机用户数持续上扬，在2013年有38％的美国人口仅使用无线通讯，相当约9,000万成年人。而这个数字在2009年上半年为21％、2003年上半年还不到3％。</p>
-<p>拜移动上网之赐，多样化的免费通讯与视讯选择，像Line、FaceTime和Skype，加速了家用电话被市场<ahref="https://github.com/nbjhgz3458/djy/blob/master/gb/tag/%E6%B7%98%E6%B1%B0.md#1">淘汰</a>。另外，许多电讯公司也提供机顶盒，以通过网络拨打长途或是国际电话较低固定费率“无限畅打”的服务。在美国，家用电话每月的账单至少要10美金以上。</p>
+<p>拜移动上网之赐，多样化的免费通讯与视讯选择，像Line、FaceTime和Skype，加速了家用电话被市场<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B7%98%E6%B1%B0.md#1">淘汰</a>。另外，许多电讯公司也提供机顶盒，以通过网络拨打长途或是国际电话较低固定费率“无限畅打”的服务。在美国，家用电话每月的账单至少要10美金以上。</p>
 <p><B>两年租约手机</B></p>
 <p>相信很多人都有使用过“两年绑约手机”的经历，当想退约时却走不掉，还要缴上一笔不合理的违约金。消费者都心知肚明：两年租约手机“吃到饱”套餐看似消费者受益，实际上却弊大于利。更甚者，由于合约上冗长的附带条款，常常让使用者每月支付高于刚开始在店里签约时的报价。</p>
 <p>其实，手机用户仍有其它选择，譬如可以到无需签约的服务厂商，以原价购买手机，尽管金额将高于两年绑约的机子，但之后每月的通讯费将远远低于绑约价，通常只有一半的金额。你可以在通讯公司MetroPCS，或是零售商Best Buy和沃尔玛（Wal-Mart）购得这样的服务，而且一些服务商也推出无合约家庭计划，很受消费者欢迎。</p>
 <p><B>酒店住房</B><br />
-	<figure id="attachment_5745051" style="width: 512px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/07/140702123200985.jpg" alt="因应酒店的高房价，游客纷纷转向一些订房服务网站，选择较低廉的公寓或是民宿。（fotolia）" title="因应酒店的高房价，游客纷纷转向一些订房服务网站，选择较低廉的公寓或是民宿。（fotolia）" width="512" b="350"
-	class="size-large wp-image-5745051" /></a><figcaption class="wp-caption-text">因应酒店的高房价，游客纷纷转向一些订房服务网站，选择较低廉的公寓或是民宿。（fotolia）</figcaption></figure><br />据普华永道会计师事务所（PricewaterhouseCoopers）报告，因休闲旅游风气日盛，市场对酒店的需求增加，造成酒店房价上扬。2013年平均美国酒店日房价为110.59美元，比前一年上升了4.1％、比2010年上涨了12.6％，预计今年美国酒店的平均房价将高达115.68美元。</p>
+	<figure id="attachment_5745051" aria-describedby="caption-attachment-5745051" style="width: 512px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/07/140702123200985.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5745051" class="wp-caption-text">因应酒店的高房价，游客纷纷转向一些订房服务网站，选择较低廉的公寓或是民宿。（fotolia）</figcaption></figure><br />据普华永道会计师事务所（PricewaterhouseCoopers）报告，因休闲旅游风气日盛，市场对酒店的需求增加，造成酒店房价上扬。2013年平均美国酒店日房价为110.59美元，比前一年上升了4.1％、比2010年上涨了12.6％，预计今年美国酒店的平均房价将高达115.68美元。</p>
 <p>因应酒店的高房价，游客纷纷转向一些订房服务网站，选择较低廉的公寓或是民宿，像是Airbnb.com和Vacation Rentals by Owner（VRBO.com）等民宿网站，有些房东甚至还提供免费机场接送服务。</p>
 <p>其它还有一些提供旅游定点“短期租屋”与“换屋旅行”的网站也威胁着酒店住房。vrbo.com、homeaway.com以及villasintl.com等网站提供来自全球超过数十万笔的“假期租屋”资讯；homeexchange.com、 homelink.org和intervac.com等网站则提供100余国、上万个换屋旅行机会。</p>
 <p>假如旅游人数多，可以考虑租一栋有多房的大豪宅；如此家庭出游就有更多的私人空间，可以下厨不用外出就餐。但是，这种低廉的短期租屋或是民宿，就没有酒店保安来得安全。</p>
@@ -57,42 +50,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/10/9/26/n3035852.md#1">iPhone或将取代传统傻瓜数码相机</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/12/11/30/n3742022.md#1">三星推出世界首款移动通信数码相机</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/13/1/18/n3779449.md#1">屏幕大 未来个人电脑受加拿大人青睐</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/13/4/11/n3844261.md#1">首季PC出货 恐跌破8千万台</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/9/26/n3035852.md#1">iPhone或将取代传统傻瓜数码相机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/11/30/n3742022.md#1">三星推出世界首款移动通信数码相机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/1/18/n3779449.md#1">屏幕大 未来个人电脑受加拿大人青睐</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/4/11/n3844261.md#1">首季PC出货 恐跌破8千万台</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/14/n11044461.md#1" target="_blank">钟声：他们晚年为何忏悔</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/14/n12688510.md#1">古籍记载：死而复活的人讲述前后因果</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/13/n12685017.md#1">回顾腊八粥缘起 乱世中传达什么救人讯息？</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/21/n12703292.md#1">【秦鹏直播】详解拜登首日17新政令对美影响</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/21/n12702067.md#1">【唐青看时事】含泪出征 拜登对华政策观察</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/22/n12704199.md#1">【新闻看点】习送礼带威胁 误判拜登遭打脸</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12701395.md#1">拜登：川普给我留下一封“非常仁慈”的信</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12698957.md#1">【秦鹏直播】川普告别演讲 释放何信息？</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12699391.md#1">【重播】川普总统离任仪式 飞抵佛罗里达</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/19/n12698651.md#1">获章子怡热情颁奖 赵丽颖一动作引赞赏</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12698979.md#1">郑爽代孕风波引爆舆论 杨颖等女星无辜受牵连</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/19/n12698452.md#1">郑爽代孕弃养丑闻发酵 合作方纷纷解约和封杀</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12701010.md#1">与母亲温馨合照曝光 古天乐孝顺事迹获爆赞</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12699972.md#1">林心如回忆创业遇撞墙：把鸟事化无事</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12699617.md#1">英媒卧底调查：武汉医生被政府要求隐瞒疫情</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/16/n12691930.md#1">大寒是吃种子最佳时节！肾虚者别错过最后机会</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12699879.md#1">天天化妆22年的妻子决定周日公休 丈夫抱怨</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/21/n12702172.md#1">为什么在冬天开车不应该先暖车？</a></li>
-<li><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/21/1/20/n12700875.md#1">如何区分新冠肺炎、慢性咳嗽、过敏？2招判断</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nbjhgz3458/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nbjhgz3458/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/7/1/n4190610.htm">小心购买！十大流行消费品正在被淘汰</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/7/1/n4190610.htm">小心购买！十大流行消费品正在被淘汰</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nbjhgz3458/djy/blob/master/gb/14/7/1/n4190610.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nbjhgz3458/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nbjhgz3458/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nbjhgz3458/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbjhgz3458/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/14/7/1/n4190610.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
